hotel page frontend update

--- a/education.html
+++ b/education.html
@@ -287,6 +287,10 @@
                                     class="img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
+                                <img src="assets/img/education/education-digital-signage.jpg"
+                                    class="img-fluid" alt="...">
+                            </div>
+                            <div class="carousel-item">
                                 <img src="assets/img/education/High-Definition-Digital-Signage-Indoor-Display-Board-Classroom-Equipment-Interactive-Smart-Board.jpg"
                                     class="img-fluid" alt="...">
                             </div>
@@ -301,6 +305,8 @@
                                 aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicatorsE" data-bs-slide-to="2"
                                 aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicatorsE" data-bs-slide-to="3"
+                                aria-label="Slide 4"></button>
                         </div>
                     </div>
                 </div>
