retail page image update

--- a/retail.html
+++ b/retail.html
@@ -440,7 +440,7 @@
                 </div>
               </div>
               <div class="col-md-5 offset-md-1 d-flex align-items-center">
-                <img src="assets/img/retail/images.jpg" alt="" class="img-fluid">
+                <img src="assets/img/retail/b49c60fc533489385afe54292bc9b216.JPG" alt="" class="img-fluid">
               </div>
             </div>
           </div>
