hospitals page done

--- a/restaurants.html
+++ b/restaurants.html
@@ -76,7 +76,7 @@
               <li><a href="restaurants.html">Bar / Restaurants</a></li>
               <li><a href="education.html">Education</a></li>
               <li><a href="#">Airport</a></li>
-              <li><a href="#">Hospitals</a></li>
+              <li><a href="hospitals.html">Hospitals</a></li>
               <li><a href="#">Event places </a></li>
               <li><a href="#">Malls & Supermarket</a></li>
               <li><a href="#">Stadium's</a></li>
