--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <li><a href="#">Power Electric Supplies </a></li>
               <li><a href="#">Factories </a></li>
               <li><a href="#">Car Show </a></li>
-              <li><a href="#">Travel Agent </a></li>
+              <li><a href="travel-agent.html">Travel Agent </a></li>
               <li><a href="#">Government institutions </a></li>
               <li><a href="#">Construction </a></li>
               <li><a href="#">Water supply </a></li>
