--- a/retail.html
+++ b/retail.html
@@ -102,7 +102,7 @@
               <li><a href="#">Power Electric supplies </a></li>
               <li><a href="#">Factories </a></li>
               <li><a href="#">Car show </a></li>
-              <li><a href="#">Travel Agent </a></li>
+              <li><a href="travel-agent.html">Travel Agent </a></li>
               <li><a href="#">Government institutions </a></li>
               <li><a href="#">Construction </a></li>
               <li><a href="#">Water supply </a></li>
