--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </li>
           <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Bus Shelter</a></li>
+              <li><a href="bus-shelter.html">Bus Shelter</a></li>
               <li><a href="#">Frontlit Billboard</a></li>
               <li><a href="#">Backlit Billboard</a></li>
               <li><a href="#">Scrolling Billboard</a></li>
