--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="bus-shelter.html">Bus Shelter</a></li>
-              <li><a href="#">Frontlit Billboard</a></li>
+              <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
               <li><a href="#">Backlit Billboard</a></li>
               <li><a href="#">Scrolling Billboard</a></li>
               <li><a href="#">LED Screen Billboard</a></li>
