backlit billboard initial setup

--- a/bus-shelter.html
+++ b/bus-shelter.html
@@ -98,7 +98,7 @@
             <ul>
               <li><a href="bus-shelter.html">Bus Shelter</a></li>
               <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
-              <li><a href="#">Backlit Billboard</a></li>
+              <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
               <li><a href="#">Scrolling Billboard</a></li>
               <li><a href="#">LED Screen Billboard</a></li>
               <li><a href="#">Advertising Light Box</a></li>
