--- a/frontlit-billboard.html
+++ b/frontlit-billboard.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Retail</title>
+    <title>Frontlit Billboard</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -98,7 +98,7 @@
                         <ul>
                             <li><a href="bus-shelter.html">Bus Shelter</a></li>
                             <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
-                            <li><a href="#">Backlit Billboard</a></li>
+                            <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
                             <li><a href="#">Scrolling Billboard</a></li>
                             <li><a href="#">LED Screen Billboard</a></li>
                             <li><a href="#">Advertising Light Box</a></li>
