scrolling billboard done

--- a/bus-shelter.html
+++ b/bus-shelter.html
@@ -99,7 +99,7 @@
               <li><a href="bus-shelter.html">Bus Shelter</a></li>
               <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
               <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
-              <li><a href="#">Scrolling Billboard</a></li>
+              <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
               <li><a href="#">LED Screen Billboard</a></li>
               <li><a href="#">Advertising Light Box</a></li>
               <li><a href="#">Scrolling Lightbox</a></li>
