led-scrolling-billboard setup

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
               <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
               <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
-              <li><a href="#">LED Screen Billboard</a></li>
+              <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
               <li><a href="#">Advertising Light Box</a></li>
               <li><a href="#">Scrolling Lightbox</a></li>
               <li><a href="#">Lamp Pole Lightbox</a></li>
