--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
               <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
               <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
-              <li><a href="#">Advertising Light Box</a></li>
+              <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
               <li><a href="#">Scrolling Lightbox</a></li>
               <li><a href="#">Lamp Pole Lightbox</a></li>
               <li><a href="#">Lamp Pole Display</a></li>
