scrolling-lightbox page done

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
               <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
               <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
-              <li><a href="#">Scrolling Lightbox</a></li>
+              <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
               <li><a href="#">Lamp Pole Lightbox</a></li>
               <li><a href="#">Lamp Pole Display</a></li>
               <li><a href="#">LCD Video Wall</a></li>
