--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
               <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
               <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
-              <li><a href="#">Lamp Pole Lightbox</a></li>
+              <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
               <li><a href="#">Lamp Pole Display</a></li>
               <li><a href="#">LCD Video Wall</a></li>
               <li><a href="#">Indoor LCD Display</a></li>
