--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
               <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
               <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
-              <li><a href="#">Lamp Pole Display</a></li>
+              <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
               <li><a href="#">LCD Video Wall</a></li>
               <li><a href="#">Indoor LCD Display</a></li>
               <li><a href="#">Outdoor LCD Display</a></li>
