--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
               <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
               <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
-              <li><a href="#">LCD Video Wall</a></li>
+              <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
               <li><a href="#">Indoor LCD Display</a></li>
               <li><a href="#">Outdoor LCD Display</a></li>
               <li><a href="#">Outdoor LED Display</a></li>
