indoor-lcd-display done

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
               <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
               <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
-              <li><a href="#">Indoor LCD Display</a></li>
+              <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
               <li><a href="#">Outdoor LCD Display</a></li>
               <li><a href="#">Outdoor LED Display</a></li>
               <li><a href="#">LCD Advertising Display</a></li>
