lcd-advertising-display page done

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
               <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
               <li><a href="#">Outdoor LED Display</a></li>
-              <li><a href="#">LCD Advertising Display</a></li>
+              <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
               <li><a href="#">Windvane</a></li>
               <!-- <li><a href="#"></a>Windvane</li> -->
 
