windvane page done

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
               <li><a href="#">Outdoor LED Display</a></li>
               <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
-              <li><a href="#">Windvane</a></li>
+              <li><a href="windvane.html">Windvane</a></li>
               <!-- <li><a href="#"></a>Windvane</li> -->
 
 
