--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <li><a href="#">Airport</a></li>
               <li><a href="hospitals.html">Hospitals</a></li>
               <li><a href="event-places.html">Event places </a></li>
-              <li><a href="#">Malls & Supermarket</a></li>
+              <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
               <li><a href="#">Stadium's</a></li>
               <li><a href="#">Telecommunications </a></li>
               <li><a href="#">Banks </a></li>
