--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <li><a href="restaurants.html">Bar / Restaurants</a></li>
               <li><a href="hotels.html">Hotels</a></li>
               <li><a href="education.html">Education</a></li>
-              <li><a href="#">Banks </a></li>
+              <li><a href="bank.html">Banks </a></li>
               <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
               <li><a href="travel-agent.html">Travel Agent </a></li>
               <li><a href="hospitals.html">Hospitals</a></li>
