car-show page setup

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
               <li><a href="travel-agent.html">Travel Agent </a></li>
               <li><a href="hospitals.html">Hospitals</a></li>
-              <li><a href="#">Car Show </a></li>
+              <li><a href="car-show.html">Car Show </a></li>
               <li><a href="#">Gym </a></li>
               <li><a href="#">Airport</a></li>
               <li><a href="event-places.html">Event places </a></li>
