--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <li><a href="travel-agent.html">Travel Agent </a></li>
               <li><a href="hospitals.html">Hospitals</a></li>
               <li><a href="car-show.html">Car Show </a></li>
-              <li><a href="#">Gym </a></li>
+              <li><a href="gym.html">Gym / Fitness Centres</a></li>
               <li><a href="#">Airport</a></li>
               <li><a href="event-places.html">Event places </a></li>
               <li><a href="#">Government institutions </a></li>
