government-institutions page setup

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <li><a href="gym.html">Gym / Fitness Centres</a></li>
               <li><a href="#">Airport</a></li>
               <li><a href="event-places.html">Event places </a></li>
-              <li><a href="#">Government institutions </a></li>
+              <li><a href="government-institutions.html">Government institutions </a></li>
               <li><a href="#">Stadium's</a></li>
             </ul>
           </li>
