stadium page content done

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <li><a href="#">Airport</a></li>
               <li><a href="event-places.html">Event places </a></li>
               <li><a href="government-institutions.html">Government institutions </a></li>
-              <li><a href="#">Stadium's</a></li>
+              <li><a href="stadium.html">Stadium's</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
