--- a/hotels.html
+++ b/hotels.html
@@ -68,59 +68,25 @@
               <li><a href="#">Screens / Players
                   Ready to learn more / Contact us
                 </a></li>
-              <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-
-              <!-- <li><a href="about.html">Welcome/About </a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li> -->
-
-              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
             </ul>
           </li>
 
           <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="retail.html">Retail</a></li>
-              <li><a href="hotels.html">Hotels</a></li>
               <li><a href="restaurants.html">Bar / Restaurants</a></li>
+              <li><a href="hotels.html">Hotels</a></li>
               <li><a href="education.html">Education</a></li>
-              <li><a href="#">Airport</a></li>
-              <li><a href="hospitals.html">Hospitals</a></li>
-              <li><a href="#">Event places </a></li>
-              <li><a href="#">Malls & Supermarket</a></li>
-              <li><a href="#">Stadium's</a></li>
-              <li><a href="#">Telecommunications </a></li>
-              <li><a href="#">Banks </a></li>
-              <li><a href="#">Power Electric supplies </a></li>
-              <li><a href="#">Factories </a></li>
-              <li><a href="#">Car show </a></li>
+              <li><a href="bank.html">Banks </a></li>
+              <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
               <li><a href="travel-agent.html">Travel Agent </a></li>
-              <li><a href="#">Government institutions </a></li>
-              <li><a href="#">Construction </a></li>
-              <li><a href="#">Water supply </a></li>
-              <li><a href="#">Gym </a></li>
-
-              <!-- <li><a href="about.html">About</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li> -->
-
-              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
+              <li><a href="hospitals.html">Hospitals</a></li>
+              <li><a href="car-show.html">Car Show </a></li>
+              <li><a href="gym.html">Gym / Fitness Centres</a></li>
+              <li><a href="#">Airport</a></li>
+              <li><a href="event-places.html">Event places </a></li>
+              <li><a href="government-institutions.html">Government institutions </a></li>
+              <li><a href="stadium.html">Stadium's</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
@@ -128,34 +94,18 @@
               <li><a href="bus-shelter.html">Bus Shelter</a></li>
               <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
               <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
-              <li><a href="#">Scrolling Billboard</a></li>
-              <li><a href="#">LED Screen Billboard</a></li>
-              <li><a href="#">Advertising Light Box</a></li>
-              <li><a href="#">Scrolling Lightbox</a></li>
-              <li><a href="#">Lamp Pole Lightbox</a></li>
-              <li><a href="#">Lamp Pole Display</a></li>
-              <li><a href="#">LCD Video Wall</a></li>
-              <li><a href="#">Indoor LCD Display</a></li>
-              <li><a href="#">Outdoor LCD Display</a></li>
+              <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
+              <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
+              <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
+              <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
+              <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
+              <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
+              <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
+              <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+              <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
               <li><a href="#">Outdoor LED Display</a></li>
-              <li><a href="#">LCD Advertising Display</a></li>
-              <li><a href="#">Windvane</a></li>
-              <!-- <li><a href="#"></a>Windvane</li> -->
-
-
-              <!-- <li><a href="about.html">About</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li> -->
-
-              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
+              <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
+              <li><a href="windvane.html">Windvane</a></li>
             </ul>
           </li>
           <li><a href="#">Case Studies</a></li>
@@ -259,11 +209,12 @@
                 <img src="assets/img/hotels/88641805.jpg" class="img-fluid" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/hotels/card_hotel16.jpg" class="img-fluid"
-                  alt="...">
+                <img src="assets/img/hotels/card_hotel16.jpg" class="img-fluid" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/hotels/credit-union-digital-sign-c727bcc505819a07c9ee2519c82ecca7582d9ba5a558f19587eede732d659965.jpg" class="img-fluid" alt="...">
+                <img
+                  src="assets/img/hotels/credit-union-digital-sign-c727bcc505819a07c9ee2519c82ecca7582d9ba5a558f19587eede732d659965.jpg"
+                  class="img-fluid" alt="...">
               </div>
             </div>
             <br>
@@ -311,11 +262,11 @@
           <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/img/hotels/digital-lobby-signage-commercial-real-estate-building.jpg" class="img-fluid" alt="...">
+                <img src="assets/img/hotels/digital-lobby-signage-commercial-real-estate-building.jpg" class="img-fluid"
+                  alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/hotels/lobby-digital-signage.jpg" class="img-fluid"
-                  alt="...">
+                <img src="assets/img/hotels/lobby-digital-signage.jpg" class="img-fluid" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="assets/img/hotels/office-hotel-screen-narrowcasting.jpg" class="img-fluid" alt="...">
@@ -404,8 +355,7 @@
                 <img src="assets/img/hotels/reception-digital-signage-r.jpg" class="img-fluid" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/hotels/Travel.jpg" class="img-fluid"
-                  alt="...">
+                <img src="assets/img/hotels/Travel.jpg" class="img-fluid" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="assets/img/hotels/word-image-22.png" class="img-fluid" alt="...">
