--- a/stadium.html
+++ b/stadium.html
@@ -66,7 +66,9 @@
                             <li><a href="#">Customers/Our work</a></li>
                             <li><a href="#">Solutions/ Industries</a></li>
                             <li><a href="#">Contents Editing</a></li>
-                            <li><a href="#">Screens / Players Ready to learn more / Contact us</a></li>
+                            <li><a href="#">Screens / Players
+                                    Ready to learn more / Contact us
+                                </a></li>
                         </ul>
                     </li>
 
@@ -74,24 +76,19 @@
                                 class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="retail.html">Retail</a></li>
-                            <li><a href="hotels.html">Hotels</a></li>
                             <li><a href="restaurants.html">Bar / Restaurants</a></li>
+                            <li><a href="hotels.html">Hotels</a></li>
                             <li><a href="education.html">Education</a></li>
-                            <li><a href="#">Airport</a></li>
-                            <li><a href="hospitals.html">Hospitals</a></li>
-                            <li><a href="#">Event places </a></li>
-                            <li><a href="#">Malls & Supermarket</a></li>
-                            <li><a href="#">Stadium's</a></li>
-                            <li><a href="#">Telecommunications </a></li>
-                            <li><a href="#">Banks </a></li>
-                            <li><a href="#">Power Electric supplies </a></li>
-                            <li><a href="#">Factories </a></li>
-                            <li><a href="#">Car show </a></li>
+                            <li><a href="bank.html">Banks </a></li>
+                            <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
                             <li><a href="travel-agent.html">Travel Agent </a></li>
-                            <li><a href="#">Government institutions </a></li>
-                            <li><a href="#">Construction </a></li>
-                            <li><a href="#">Water supply </a></li>
-                            <li><a href="#">Gym </a></li>
+                            <li><a href="hospitals.html">Hospitals</a></li>
+                            <li><a href="car-show.html">Car Show </a></li>
+                            <li><a href="gym.html">Gym / Fitness Centres</a></li>
+                            <li><a href="#">Airport</a></li>
+                            <li><a href="event-places.html">Event places </a></li>
+                            <li><a href="government-institutions.html">Government institutions </a></li>
+                            <li><a href="stadium.html">Stadium's</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
@@ -106,11 +103,11 @@
                             <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
                             <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
                             <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
-                            <li><a href="#">Indoor LCD Display</a></li>
-                            <li><a href="#">Outdoor LCD Display</a></li>
+                            <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+                            <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
                             <li><a href="#">Outdoor LED Display</a></li>
-                            <li><a href="#">LCD Advertising Display</a></li>
-                            <li><a href="#">Windvane</a></li>
+                            <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
+                            <li><a href="windvane.html">Windvane</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Case Studies</a></li>
