--- a/windvane.html
+++ b/windvane.html
@@ -69,21 +69,6 @@
                             <li><a href="#">Screens / Players
                                     Ready to learn more / Contact us
                                 </a></li>
-                            <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-
-                            <!-- <li><a href="about.html">Welcome/About </a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li> -->
-
-                            <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
                         </ul>
                     </li>
 
@@ -91,38 +76,19 @@
                                 class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="retail.html">Retail</a></li>
-                            <li><a href="hotels.html">Hotels</a></li>
                             <li><a href="restaurants.html">Bar / Restaurants</a></li>
+                            <li><a href="hotels.html">Hotels</a></li>
                             <li><a href="education.html">Education</a></li>
-                            <li><a href="#">Airport</a></li>
-                            <li><a href="hospitals.html">Hospitals</a></li>
-                            <li><a href="#">Event places </a></li>
-                            <li><a href="#">Malls & Supermarket</a></li>
-                            <li><a href="#">Stadium's</a></li>
-                            <li><a href="#">Telecommunications </a></li>
-                            <li><a href="#">Banks </a></li>
-                            <li><a href="#">Power Electric supplies </a></li>
-                            <li><a href="#">Factories </a></li>
-                            <li><a href="#">Car show </a></li>
+                            <li><a href="bank.html">Banks </a></li>
+                            <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
                             <li><a href="travel-agent.html">Travel Agent </a></li>
-                            <li><a href="#">Government institutions </a></li>
-                            <li><a href="#">Construction </a></li>
-                            <li><a href="#">Water supply </a></li>
-                            <li><a href="#">Gym </a></li>
-
-                            <!-- <li><a href="about.html">About</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li> -->
-
-                            <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
+                            <li><a href="hospitals.html">Hospitals</a></li>
+                            <li><a href="car-show.html">Car Show </a></li>
+                            <li><a href="gym.html">Gym / Fitness Centres</a></li>
+                            <li><a href="#">Airport</a></li>
+                            <li><a href="event-places.html">Event places </a></li>
+                            <li><a href="government-institutions.html">Government institutions </a></li>
+                            <li><a href="stadium.html">Stadium's</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
@@ -130,34 +96,18 @@
                             <li><a href="bus-shelter.html">Bus Shelter</a></li>
                             <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
                             <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
-                            <li><a href="#">Scrolling Billboard</a></li>
-                            <li><a href="#">LED Screen Billboard</a></li>
-                            <li><a href="#">Advertising Light Box</a></li>
-                            <li><a href="#">Scrolling Lightbox</a></li>
-                            <li><a href="#">Lamp Pole Lightbox</a></li>
-                            <li><a href="#">Lamp Pole Display</a></li>
-                            <li><a href="#">LCD Video Wall</a></li>
-                            <li><a href="#">Indoor LCD Display</a></li>
-                            <li><a href="#">Outdoor LCD Display</a></li>
+                            <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
+                            <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
+                            <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
+                            <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
+                            <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
+                            <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
+                            <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
+                            <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+                            <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
                             <li><a href="#">Outdoor LED Display</a></li>
-                            <li><a href="#">LCD Advertising Display</a></li>
-                            <li><a href="#">Windvane</a></li>
-                            <!-- <li><a href="#"></a>Windvane</li> -->
-
-
-                            <!-- <li><a href="about.html">About</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li> -->
-
-                            <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
+                            <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
+                            <li><a href="windvane.html">Windvane</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Case Studies</a></li>
@@ -185,8 +135,7 @@
                 <div class="carousel-inner" role="listbox">
 
                     <!-- Slide 1 -->
-                    <div class="carousel-item active"
-                        style="background-image: url(assets/img/Windvane/slider3.jpg)">
+                    <div class="carousel-item active" style="background-image: url(assets/img/Windvane/slider3.jpg)">
                         <div class="carousel-container">
                             <div class="container">
                                 <h2 class="animate__animated animate__fadeInDown">
@@ -198,8 +147,7 @@
                     </div>
 
                     <!-- Slide 2 -->
-                    <div class="carousel-item"
-                        style="background-image: url(assets/img/Windvane/slider4.jpg)">
+                    <div class="carousel-item" style="background-image: url(assets/img/Windvane/slider4.jpg)">
                         <div class="carousel-container">
                             <div class="container">
                                 <h2 class="animate__animated animate__fadeInDown">
@@ -311,12 +259,10 @@
                     <div id="carouselExampleIndicatorsE" class="carousel slide mt-5" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/Windvane/1.jpg" class="img-fluid"
-                                    alt="...">
+                                <img src="assets/img/Windvane/1.jpg" class="img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/Windvane/2.jpg"
-                                    class="img-fluid" alt="...">
+                                <img src="assets/img/Windvane/2.jpg" class="img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/img/Windvane/3.jpg" class="img-fluid" alt="...">
@@ -418,8 +364,7 @@
                     <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/Windvane/4.jpg" class="img-fluid"
-                                    alt="...">
+                                <img src="assets/img/Windvane/4.jpg" class="img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/img/Windvane/5.jpg" class="img-fluid" alt="...">
@@ -563,13 +508,15 @@
                                         can also find the latest deals. <br>
                                         YM is packed with information to help you get the most from your time on the
                                         water. <br>
-                                        <ul>
-                                            <li>Take your seamanship to the next level with tips, advice and skills from our experts</li>
-                                            <li>Impartial in-depth reviews of the latest yachts and equipment</li>
-                                            <li>Cruising guides to help you reach those dream destinations</li>
-                                        </ul>
+                                    <ul>
+                                        <li>Take your seamanship to the next level with tips, advice and skills from our
+                                            experts</li>
+                                        <li>Impartial in-depth reviews of the latest yachts and equipment</li>
+                                        <li>Cruising guides to help you reach those dream destinations</li>
+                                    </ul>
                                     </p>
-                                    <p>Follow us on <a href="#">Facebook</a>, <a href="#">Twitter</a> and <a href="#">Instagram</a> .</p>
+                                    <p>Follow us on <a href="#">Facebook</a>, <a href="#">Twitter</a> and <a
+                                            href="#">Instagram</a> .</p>
                                 </div>
                             </div>
                         </div>
@@ -592,16 +539,13 @@
                     <div id="carouselExampleIndicatorsI3" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/Windvane/7.jpg" class="img-fluid"
-                                    alt="...">
+                                <img src="assets/img/Windvane/7.jpg" class="img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/Windvane/8.jpg" class="img-fluid"
-                                    alt="...">
+                                <img src="assets/img/Windvane/8.jpg" class="img-fluid" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/Windvane/9.jpg"
-                                    class="img-fluid" alt="...">
+                                <img src="assets/img/Windvane/9.jpg" class="img-fluid" alt="...">
                             </div>
                         </div>
                         <br>
