intro added in few sectors/solutions

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
           </li>
           <li><a href="#">Case Studies</a></li>
           <li><a href="#">Rentals</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
 
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
           <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -228,11 +228,6 @@
 
         <div class="row content text-center">
           <h2>DIGITAL SIGNAGE EVERYONE CAN USE</h2>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
           <div class="col-md-4">
             <img width="80" height="80" class="img-fluid" src="assets/img/features/content.png" alt="">
             <br>
