--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 <body>
 
   <!-- ======= Header ======= -->
-    <div class="top-header">
+    <div class="top-header p-4">
       <div class="container">
         <div class="row d-flex align-items-center justify-content-evenly">
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center p-2">
             <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
           </div>
-          <div class="col-md-4 text-center">
-            <img class="img-fluid" height="80" src="assets/img/logo/aflaxdigitalsignagelogowhite.png">
+          <div class="col-md-4 text-center p-2">
+            <img style="height: 100px;" class="img-fluid" src="assets/img/logo/aflaxdigitalsignagelogowhite.png">
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center p-2">
             <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
           </div>
         </div>
